--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,1 +1,3 @@
-<p class="text-center text-muted">© Copyright 2014 The Awesome People</p>
+<footer>
+    <p class="text-center text-muted">© Copyright 2016</p>
+</footer>
