--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<header>
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
 
@@ -15,3 +16,4 @@
       
     </div>
 </nav>
+</header>
