Working admin/settings page

--- a/views/admin/pages/pages.ejs
+++ b/views/admin/pages/pages.ejs
@@ -4,10 +4,9 @@
 <body class="container">
   <% include ../partials/header %>
   <main ng-app="myApp" ng-controller="myCtrl">
-  <h1>Overview</h1>
+  <h1>Pages</h1>
 
-  Overview and starting page (show number of unverified posts etc)
-   
+    
   </main>
 </body>
 </html>
