--- a/views/admin/pages/settings.ejs
+++ b/views/admin/pages/settings.ejs
@@ -2,35 +2,33 @@
 <html lang="en">
 <% include ../partials/head %>
 <body class="container">
-    <% include ../partials/header %>
-    <main ng-app="myApp" ng-controller="myCtrl">
+  <% include ../partials/header %>
+  <main ng-app="myApp" ng-controller="myCtrl">
+  <h1>Various site settings</h1>
 
-    <h1>Various site settings</h1>
-    <p>You wrote: {{ name }}</p>
-
-  <form class="form-horizontal">
+  <form class="form-horizontal" ng-submit="saveSettings()">
     <div class="form-group">
       <label class="control-label col-sm-2" for="siteName">Site name:</label>
       <div class="col-sm-10">
-        <input class="form-control" id="siteName" placeholder="Enter name of your site">
+        <input class="form-control" id="siteName" placeholder="Enter name of your site" ng-model="settings.siteName">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="siteMotto">Site motto:</label>
       <div class="col-sm-10">
-        <input class="form-control" id="siteMotto" placeholder="This text is displayed under site name on index">
+        <input class="form-control" id="siteMotto" placeholder="This text is displayed under site name on index" ng-model="settings.siteMotto">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter email">
+        <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="settings.email">
       </div>
     </div>
     <div class="form-group">
       <label class="control-label col-sm-2" for="pwd">Password:</label>
       <div class="col-sm-10"> 
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+        <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="settings.password">
       </div>
     </div>
     <div class="form-group">
@@ -40,6 +38,6 @@
     </div>
   </form>
     
-    </main>
+  </main>
 </body>
 </html>
