--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -4,11 +4,12 @@
     <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
   </button>
   <ul class="dropdown-menu">
-    <li><a href="/admin/overview">Overview</a></li>
-    <li><a href="/admin/comments">Comments</a></li>
-    <li><a href="/admin/posts">Posts</a></li>
-    <li><a href="/admin/pages">Pages</a></li>
-    <li><a href="/admin/settings">Settings</a></li>
+    <li><a href="/admin/pages/overview"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Overview</a></li>
+    <li><a href="/admin/pages/comments"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>&nbsp;Comments</a></li>
+    <li><a href="/admin/pages/posts"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;Posts</a></li>
+    <li><a href="/admin/pages/pages"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;Pages</a></li>
+    <li><a href="/admin/pages/settings"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;Settings</a></li>
+    <li><a href="#"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>&nbsp;Logout</a></li>
   </ul>
 </div>
 </header>
