pages editor works

--- a/views/admin/pages/comments.ejs
+++ b/views/admin/pages/comments.ejs
@@ -3,7 +3,7 @@
 <% include ../partials/head %>
 <body class="container">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="myCtrl">
+  <main ng-app="myApp" ng-controller="commentsCtrl">
   <h1>Comments</h1>
 
     
