--- a/views/admin/pages/overview.ejs
+++ b/views/admin/pages/overview.ejs
@@ -3,7 +3,7 @@
 <% include ../partials/head %>
 <body class="container">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="myCtrl">
+  <main ng-app="myApp" ng-controller="overviewCtrl">
   <h1>Overview</h1>
 
   Overview and starting page (show number of unverified posts etc)
