--- a/views/admin/pages/settings.ejs
+++ b/views/admin/pages/settings.ejs
@@ -3,7 +3,7 @@
 <% include ../partials/head %>
 <body class="container">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="myCtrl">
+  <main ng-app="myApp" ng-controller="settingsCtrl">
   <h1>Various site settings</h1>
 
   <form class="form-horizontal" ng-submit="saveSettings()">
