--- a/views/admin/pages/posts.ejs
+++ b/views/admin/pages/posts.ejs
@@ -3,7 +3,7 @@
 <% include ../partials/head %>
 <body class="container">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="myCtrl">
+  <main ng-app="myApp" ng-controller="postsCtrl">
   <h1>Posts</h1>
 
     
