working admin/pages. All libs are local now

--- a/views/admin/pages/pages.ejs
+++ b/views/admin/pages/pages.ejs
@@ -6,19 +6,16 @@
   <main ng-app="myApp" ng-controller="pagesCtrl">
   <h1>Pages</h1>
 
-<div>
-<a href="/admin/menu/editor"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add a new page</a>
-</div>
+  <div>
+    <a href="/admin/editor"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add a new page</a>
+  </div>
 
+  <div>
+    <ul>
+      <li ng-repeat="page in pages"><a ng-href="/admin/editor/{{page._id}}">{{page.title}}</a>&nbsp;[<a href="#" ng-click="deletePage(page._id)">delete</a>]</li>
+    </ul>
+  </div>
 
-
-<div>
-            <ul>
-                    <li ng-repeat="page in pages"><a href="{{page.url}}"></a>{{page.title}}</li>
-            </ul>
-    </div>
-
-    </main>
-
+  </main>
 </body>
 </html>
