--- a/views/admin/pages/editor.ejs
+++ b/views/admin/pages/editor.ejs
@@ -24,7 +24,7 @@
 
   </main>
 	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
-	<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+	<link rel="stylesheet" href="/js/simplemde.min.css">
+	<script src="/js/simplemde.min.js"></script>
 </body>
 </html>
