--- a/views/admin/pages/posts.ejs
+++ b/views/admin/pages/posts.ejs
@@ -6,6 +6,16 @@
   <main ng-app="myApp" ng-controller="postsCtrl">
   <h1>Posts</h1>
 
+
+  <div>
+    <a href="/admin/editor"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp;Add a new post</a>
+  </div>
+
+  <div>
+    <ul>
+      <li ng-repeat="post in posts"><a ng-href="/admin/editor/{{post._id}}">{{post.title}}</a>&nbsp;[<a href="#" ng-click="deletePost(post._id)">delete</a>]</li>
+    </ul>
+  </div>
     
   </main>
 </body>
