overview page works now!

--- a/views/admin/pages/comments.ejs
+++ b/views/admin/pages/comments.ejs
@@ -6,6 +6,7 @@
   <main ng-app="myApp" ng-controller="commentsCtrl">
   <h1>Comments</h1>
 
+  <p>Comments are not implemented.</p>
     
   </main>
 </body>
