--- a/views/admin/pages/overview.ejs
+++ b/views/admin/pages/overview.ejs
@@ -7,6 +7,10 @@
   <h1>Overview</h1>
 
   Overview and starting page (show number of unverified posts etc)
+
+  <p>Site name: {{overview.siteName}}</p>
+  <p>Number of pages: {{overview.pageCount}}</p>
+  <p>Number of posts: {{overview.postCount}}</p>
    
   </main>
 </body>
