--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -9,7 +9,7 @@
     <li><a href="/admin/menu/posts"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;Posts</a></li>
     <li><a href="/admin/menu/pages"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;Pages</a></li>
     <li><a href="/admin/menu/settings"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;Settings</a></li>
-    <li><a href="#"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>&nbsp;Logout</a></li>
+    <li><a href="/logout"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>&nbsp;Logout</a></li>
   </ul>
 </div>
 </header>
