--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,15 +3,15 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-                EJS Is Fun
-            </a>
+            <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
+            EJS Is Fun
         </div>
 
         <ul class="nav navbar-nav">
             <li><a href="/">Home</a></li>
-            <li><a href="/about">About</a></li>
+            <% menu.forEach(function(item){ %>
+                <li><a href="/pages/<%= item.url %>"><%= item.title %></a></li>
+            <% }) %>
         </ul>
       
     </div>
