--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,3 @@
 <footer>
-    <p class="text-center text-muted">© Copyright 2016</p>
+    <p class="text-center text-muted">© Copyright 2016. <a href="/login">admin</a></p>
 </footer>
