some css styling of administration

--- a/views/admin/pages/overview.ejs
+++ b/views/admin/pages/overview.ejs
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <% include ../partials/head %>
-<body class="container">
+<body ng-app="myApp">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="overviewCtrl">
-  <h1>Overview</h1>
+  <main ng-controller="overviewCtrl">
 
   Overview and starting page (show number of unverified posts etc)
 
