--- a/views/admin/partials/head.ejs
+++ b/views/admin/partials/head.ejs
@@ -1,11 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <title>ixCMS admin</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/admin.css">
     <script src="/js/angular.min.js"></script>
     <script src="/js/admin.js"></script>
-
-    <!-- TODO: REMOVE BOOTSTRAP AND JQUERY (slow). jQuery is used only in bootstrap -->
 </head>
