--- a/views/admin/pages/comments.ejs
+++ b/views/admin/pages/comments.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <% include ../partials/head %>
-<body class="container">
+<body ng-app="myApp">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="commentsCtrl">
+  <main ng-controller="commentsCtrl">
   <h1>Comments</h1>
 
   <p>Comments are not implemented.</p>
