--- a/views/admin/pages/editor.ejs
+++ b/views/admin/pages/editor.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <% include ../partials/head %>
-<body class="container">
+<body ng-app="myApp">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="editorCtrl">
+  <main ng-controller="editorCtrl">
   <h1>Editor</h1>
 
 
