--- a/views/admin/pages/login.ejs
+++ b/views/admin/pages/login.ejs
@@ -7,8 +7,8 @@
     <script src="/js/angular.min.js"></script>
     <script src="/js/admin.js"></script>
 </head>
-<body class="container">
-  <main ng-app="myApp" ng-controller="loginCtrl">
+<body ng-app="myApp">
+  <main ng-controller="loginCtrl">
     <div class="login-page">
       <div class="form">
         <form name="loginForm" class="login-form" ng-submit="submit()">
