--- a/views/admin/pages/settings.ejs
+++ b/views/admin/pages/settings.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <% include ../partials/head %>
-<body class="container">
+<body ng-app="myApp">
   <% include ../partials/header %>
-  <main ng-app="myApp" ng-controller="settingsCtrl">
+  <main ng-controller="settingsCtrl">
   <h1>Various site settings</h1>
 
   <form class="form-horizontal" ng-submit="saveSettings()">
