--- a/views/admin/partials/header.ejs
+++ b/views/admin/partials/header.ejs
@@ -1,15 +1,10 @@
-<header>
-<div class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-    <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
-  </button>
-  <ul class="dropdown-menu">
-    <li><a href="/admin/menu/overview"><span class="glyphicon glyphicon-home" aria-hidden="true"></span>&nbsp;Overview</a></li>
-    <li><a href="/admin/menu/comments"><span class="glyphicon glyphicon-comment" aria-hidden="true"></span>&nbsp;Comments</a></li>
-    <li><a href="/admin/menu/posts"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>&nbsp;Posts</a></li>
-    <li><a href="/admin/menu/pages"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;Pages</a></li>
-    <li><a href="/admin/menu/settings"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span>&nbsp;Settings</a></li>
-    <li><a href="/logout"><span class="glyphicon glyphicon-share-alt" aria-hidden="true"></span>&nbsp;Logout</a></li>
+<nav ng-controller="headerCtrl">
+  <ul id="menu">
+    <li><a href="/admin/menu/overview" ng-class="activeMenu === 'overview' ? 'active' : ''">Overview</a></li>
+    <li><a href="/admin/menu/comments" ng-class="activeMenu === 'comments' ? 'active' : ''">Comments</a></li>
+    <li><a href="/admin/menu/posts" ng-class="activeMenu === 'posts' ? 'active' : ''">Posts</a></li>
+    <li><a href="/admin/menu/pages" ng-class="activeMenu === 'pages' ? 'active' : ''">Pages</a></li>
+    <li><a href="/admin/menu/settings" ng-class="activeMenu === 'settings' ? 'active' : ''">Settings</a></li>
+    <li style="float:right"><a href="/logout">Logout</a></li>
   </ul>
-</div>
-</header>
+</nav>
