--- a/views/admin/partials/head.ejs
+++ b/views/admin/partials/head.ejs
@@ -4,4 +4,5 @@
     <link rel="stylesheet" href="/css/admin.css">
     <script src="/js/angular.min.js"></script>
     <script src="/js/admin.js"></script>
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
 </head>
