--- a/views/admin/pages/posts.ejs
+++ b/views/admin/pages/posts.ejs
@@ -5,7 +5,7 @@
   <% include ../partials/header %>
   <div id="toolbar">
     <ul>
-      <li><a href="/admin/editor/posts" class="color1"><i class="fa fa-plus-circle"></i>Create a new post</a></li>
+      <li><a href="/admin/editor/posts" class="color1"><i class="fa fa-plus-circle"></i>New post</a></li>
     </ul>
   </div>
   <main ng-controller="postsCtrl">
