--- a/views/admin/pages/editor.ejs
+++ b/views/admin/pages/editor.ejs
@@ -3,15 +3,16 @@
 <% include ../partials/head %>
 <body ng-app="myApp">
   <% include ../partials/header %>
-  <main ng-controller="editorCtrl">
+  <div ng-controller="editorCtrl">
+  <div id="toolbar">
+    <ul>
+      <li><a href ng-click="docSave()" class="color1"><i class="fa fa-save"></i>Save document</a></li>
+      <li><a href class="color2"><i class="fa fa-eye"></i>Show all fields</a></li>
+      <li><a href ng-click="docExit()" class="color3"><i class="fa fa-chevron-right"></i>Exit without saving</a></li>
+    </ul>
+  </div>
+  <main>
   <h1>Editor</h1>
-
-
-    <div class="btn-group">
-      <button type="button" class="btn btn-success" ng-click="docSave()">Save document</button>
-      <button type="button" class="btn btn-warning" ng-click="docExit()">Exit without saving</button>
-    </div>
-
   
     <div class="form-group">
       <input class="form-control" id="editorTitle" placeholder="Page title" ng-model="editor.title" ng-change="editor.url = editor.title.split(' ').join('-').toLowerCase();">
@@ -19,11 +20,8 @@
       <textarea class="form-control" id="editorText"></textarea>
     </div>
 
-
-
-
   </main>
-	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css"> -->
+  </div>
 	<link rel="stylesheet" href="/js/simplemde.min.css">
 	<script src="/js/simplemde.min.js"></script>
 </body>
