--- a/views/admin/pages/editor.ejs
+++ b/views/admin/pages/editor.ejs
@@ -7,7 +7,7 @@
   <div id="toolbar">
     <ul>
       <li><a href ng-click="docSave()" class="color1"><i class="fa fa-save"></i>Save document</a></li>
-      <li><a href ng-click="showEditor = !showEditor;" class="color2"><i class="fa fa-wpforms"></i>Show extra fields</a></li>
+      <li><a href ng-click="showEditor = !showEditor;" class="color2"><i class="fa fa-wpforms"></i>{{showEditor ? 'Hide extra fields' : 'Show extra fields'}}</a></li>
       <li><a href ng-click="docExit()" class="color3"><i class="fa fa-chevron-right"></i>Exit without saving</a></li>
     </ul>
   </div>
@@ -26,12 +26,12 @@
     </div>
     <div class="field" ng-show="collection === 'posts'">
         <label for="abstract">Abstract:</label>
-        <textarea elastic type="text" name="abstract" ng-model="editor.abstract"></textarea>
+        <div class="textareadiv" contenteditable="true" ng-model="editor.abstract">{{ editor.abstract }}</div>
     </div>
     <div class="field" ng-show="collection === 'posts'">
         <label for="status">Status:</label>
         <span>
-            <input type="radio"  class="nice-button" name="status" value="draft" id="draft" ng-model="editor.status" checked>
+            <input type="radio"  class="nice-button" name="status" value="draft" id="draft" ng-model="editor.status">
             <label for="draft">Draft</label>
         </span>
         <span>
@@ -42,7 +42,7 @@
     <div class="field" ng-show="collection === 'posts'">
         <label for="comments">Comments:</label>
         <span>
-            <input type="checkbox" class="nice-button" name="comments" id="comments" ng-model="editor.allowComments" checked>
+            <input type="checkbox" class="nice-button" name="comments" id="comments" ng-model="editor.allowComments">
             <label for="comments">Allow</label>
         </span>
     </div>
