--- a/views/admin/pages/settings.ejs
+++ b/views/admin/pages/settings.ejs
@@ -4,37 +4,28 @@
 <body ng-app="myApp">
   <% include ../partials/header %>
   <main ng-controller="settingsCtrl">
-  <h1>Various site settings</h1>
 
-  <form class="form-horizontal" ng-submit="saveSettings()">
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="siteName">Site name:</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="siteName" placeholder="Enter name of your site" ng-model="settings.siteName">
-      </div>
+  <h2>General settings</h2>
+
+  <form class="nice-form" ng-submit="saveSettings()">
+    <div class="field">
+        <label for="siteName">Site name:</label>
+        <input name="siteName" type="text" placeholder="Enter name of your site" ng-model="settings.siteName">
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="siteMotto">Site motto:</label>
-      <div class="col-sm-10">
-        <input class="form-control" id="siteMotto" placeholder="This text is displayed under site name on index" ng-model="settings.siteMotto">
-      </div>
+    <div class="field">
+        <label for="siteMotto">Site motto:</label>
+        <input name="siteMotto" type="text" placeholder="This text is displayed under site name on index" ng-model="settings.siteMotto">
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="email">Email:</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="settings.email">
-      </div>
+    <div class="field">
+        <label for="email">E-mail:</label>
+        <input name="email" type="email" placeholder="Your e-mail used for login" ng-model="settings.email">
     </div>
-    <div class="form-group">
-      <label class="control-label col-sm-2" for="pwd">Password:</label>
-      <div class="col-sm-10"> 
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password" ng-model="settings.password">
-      </div>
+    <div class="field">
+        <label for="password">Password:</label>
+        <input name="password" type="password" placeholder="Login password for administration" ng-model="settings.password">
     </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default">Submit</button>
-      </div>
+    <div class="field-button">
+        <button type="submit">Submit</button>
     </div>
   </form>
     
