--- a/views/admin/pages/settings.ejs
+++ b/views/admin/pages/settings.ejs
@@ -25,7 +25,7 @@
         <input name="password" type="password" placeholder="Login password for administration" ng-model="settings.password">
     </div>
     <div class="field-button">
-        <button type="submit">Submit</button>
+        <button type="submit">Save</button>
     </div>
   </form>
     
