--- a/views/admin/pages/editor.ejs
+++ b/views/admin/pages/editor.ejs
@@ -11,7 +11,7 @@
       <li><a href ng-click="docExit()" class="color3"><i class="fa fa-chevron-right"></i>Exit without saving</a></li>
     </ul>
   </div>
-  <form class="nice-form" ng-show="showEditor">
+  <form class="nice-form editor-border" ng-show="showEditor">
     <div class="field">
         <label for="url">Article URL:</label>
         <input name="url" type="text" ng-model="editor.url">
